Started right side of top bar, currently facing an issue with alignment.

--- a/style.css
+++ b/style.css
@@ -22,12 +22,14 @@ body{
     display: grid;
     grid-template: auto 1fr auto / 1fr;
     font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
 }
 
 
 .sb-header{
     grid-row: 1;
     padding: 1rem;
+
 }
 .sb-main{
     grid-row: 2;
@@ -39,24 +41,51 @@ body{
     background-color: var(--starbucksCreamyWhite);
 }
 
-.sb-header__top-nav-bar{
+/* .sb-header__top-nav-bar{
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    width: 100%;
+}
+
+.sb-header__left-container{
+    display: flex;
+    flex-direction: row;
+
 }
 .sb-header__top-nav-bar__list{
     list-style: none;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-self: center;
 }
 
 .sb-header__top-nav-bar__list-item{
     margin-left: 1rem;
     margin-right: 1rem;
-    font-weight: 600;
 }
 .sb-header__top-nav-bar__list-item:hover{
     color: var(--starbucksMidGreen);
+}
+
+.sb-header__top-right-options {
+    color: red;
+    display: flex;
+} */
+
+.sb-header__top-nav-bar{
+    display: flex;
+    width: 100%;
+    max-width: 100%;
+    align-items: center;
+    
+}
+
+.sb-header__top-nav-bar__item{
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+.sb-header__top-nav-bar__item_flex-end{
+    margin-left: auto;
 }
 
